--- a/Loweb/index2.html
+++ b/Loweb/index2.html
@@ -4,10 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	Тестовая страница<br>
-	<a href="/two/">Ссылка!</a>
+	А это вторая страница, норм<br>
+	<a href="/"> Пошли на главную</a>
 </body>
 </html>
