--- a/Test/index.html
+++ b/Test/index.html
@@ -9,5 +9,9 @@
 <body>
 	Тестовая страница<br>
 	<a href="/two/">Ссылка!</a>
+
+	<div>{{MyVar}} - переменная</div>
+	<div>{{MyVar}} - та же переменная</div>
+	<div>{{MyVar2}} - вторая переменная</div>
 </body>
 </html>
