--- a/Test/hello.html
+++ b/Test/hello.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
-	<form action="/hello/" method="post" name="myForm">
+	<form action="/hello/hello/" method="post" name="myForm">
         <input type="hidden" name="CSRF_TOKEN" value="{{CSRF_TOKEN}}">
 		<textarea name="myText"></textarea>
 		<input type="submit" value="Нажми на меня уже!" name="mySubmit">
